--- a/templates/account/show.html.twig
+++ b/templates/account/show.html.twig
@@ -22,6 +22,39 @@
         </tbody>
     </table>
 
+    <h2>Transactions</h2>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Memo</th>
+                <th>Transaction Type</th>
+                <th>Amount</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for transaction in transactions %}
+            <tr>
+                <td>{{ transaction.date }}</td>
+                <td>{{ transaction.memo }}</td>
+                <td>{{ transaction.transaction_type }}</td>
+                <td>{{ transaction.amount }}</td>
+                <td>{{ account.accountType }}</td>
+                <td>
+                    <a href="{{ path('app_account_show', {'id': account.id}) }}">show</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="5">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <a href="{{ path('app_transaction_new', {'account': account.id}) }}">New Transaction</a>
+
     <a href="{{ path('holder_accounts', {'id': holder.id}) }}">back to list</a>
 
 {% endblock %}
